RESOLVED FIXED265677
[Wasm-GC] Fix array.new_data & array.new_elem for recursive array types
https://bugs.webkit.org/show_bug.cgi?id=265677
Summary [Wasm-GC] Fix array.new_data & array.new_elem for recursive array types
Asumu Takikawa
Reported 2023-12-01 09:09:25 PST
The array.new_data & new_elem operations don't currently expand recursive type definitions when checking the array type for compatibility, so recursive types don't work.
Attachments
Asumu Takikawa
Comment 1 2023-12-01 15:47:05 PST
EWS
Comment 2 2023-12-01 22:32:43 PST
Committed 271421@main (992f87e27f7f): <https://commits.webkit.org/271421@main> Reviewed commits have been landed. Closing PR #21190 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-12-01 22:33:14 PST
Note You need to log in before you can comment on or make changes to this bug.