[Wasm-GC] Fix array.new_data & array.new_elem for recursive array types https://bugs.webkit.org/show_bug.cgi?id=265677

Reviewed by Justin Michaud.

Use helper functions to correctly handle recursive type cases in array.new_data
& new_elem.

* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):
* Source/JavaScriptCore/wasm/WasmOperationsInlines.h:
(JSC::Wasm::arrayNewData):
(JSC::Wasm::arrayNewElem):

Canonical link: https://commits.webkit.org/271421@main